# r1-remake

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  setup.py
r1/: countdown_grpo_claude.py  debug.py  grpo.py  os_utils.py
r1/data/: core.py  countdown.py
r1/utils/: model_utils.py
scripts/: filter_dataset.py  sample_group.py  setup_remote_instance.sh  sync_remote_instance.sh  train_grpo_countdown.py
tests/r1/data/: test_core.py  test_countdown.py  test_grpo.py
